--- a/jupyter_notebooks/Modelling_Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling_Evaluating.ipynb
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,22 +1318,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 1 commit.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   .gitignore\u001b[m\n",
-      "\t\u001b[31mmodified:   jupyter_notebooks/Modelling_Evaluating.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "[main 8ecda1f]  v2\n",
+      " 7 files changed, 116 insertions(+), 4003 deletions(-)\n",
+      " create mode 100644 outputs/v2/class_indices.pk1\n",
+      " create mode 100644 outputs/v2/evaluation.pk1\n",
+      " create mode 100644 outputs/v2/labels_distribution.png\n",
+      " create mode 100644 outputs/v2/model_training_accuracy.png\n",
+      " create mode 100644 outputs/v2/model_training_losses.png\n",
+      " create mode 100644 outputs/v2/trained_model.h5\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \" rerun all jupyter notebooks to see if error cleared and add evaluation.pk1\""
+    "!git commit -m \" v2\""
    ]
   },
   {
@@ -1352,16 +1349,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 54, done.\n",
-      "Counting objects: 100% (54/54), done.\n",
+      "Uploading LFS objects: 100% (1/1), 89 MB | 22 MB/s, done.                       \n",
+      "Enumerating objects: 17, done.\n",
+      "Counting objects: 100% (17/17), done.\n",
       "Delta compression using up to 32 threads\n",
-      "Compressing objects: 100% (27/27), done.\n",
-      "error: RPC failed; HTTP 400 curl 22 The requested URL returned error: 400\n",
-      "send-pack: unexpected disconnect while reading sideband packet\n",
-      "Writing objects: 100% (31/31), 325.18 MiB | 19.48 MiB/s, done.\n",
-      "Total 31 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\n",
-      "fatal: the remote end hung up unexpectedly\n",
-      "Everything up-to-date\n"
+      "Compressing objects: 100% (10/10), done.\n",
+      "Writing objects: 100% (12/12), 797.36 KiB | 7.45 MiB/s, done.\n",
+      "Total 12 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
+      "To https://github.com/Crimson-Wizard/mildew-detector.git\n",
+      "   794e016..8ecda1f  main -> main\n"
      ]
     }
    ],
