v3 updated batch amount

--- a/jupyter_notebooks/Modelling_Evaluating.ipynb
+++ b/jupyter_notebooks/Modelling_Evaluating.ipynb
@@ -1326,19 +1326,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8ecda1f]  v2\n",
-      " 7 files changed, 116 insertions(+), 4003 deletions(-)\n",
-      " create mode 100644 outputs/v2/class_indices.pk1\n",
-      " create mode 100644 outputs/v2/evaluation.pk1\n",
-      " create mode 100644 outputs/v2/labels_distribution.png\n",
-      " create mode 100644 outputs/v2/model_training_accuracy.png\n",
-      " create mode 100644 outputs/v2/model_training_losses.png\n",
-      " create mode 100644 outputs/v2/trained_model.h5\n"
+      "[main 8da1831]  v3\n",
+      " 12 files changed, 137 insertions(+), 123 deletions(-)\n",
+      " create mode 100644 outputs/v3/avg_var_healthy.png\n",
+      " create mode 100644 outputs/v3/avg_var_powdery_mildew.png\n",
+      " create mode 100644 outputs/v3/class_indices.pk1\n",
+      " create mode 100644 outputs/v3/evaluation.pk1\n",
+      " create mode 100644 outputs/v3/image_shape.pk1\n",
+      " create mode 100644 outputs/v3/labels_distribution.png\n",
+      " create mode 100644 outputs/v3/model_training_accuracy.png\n",
+      " create mode 100644 outputs/v3/model_training_losses.png\n",
+      " create mode 100644 outputs/v3/trained_model.h5\n",
+      " create mode 100644 outputs/v3/trained_model_flexible.h5\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \" v2\""
+    "!git commit -m \" v3\""
    ]
   },
   {
@@ -1357,16 +1361,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading LFS objects: 100% (1/1), 89 MB | 22 MB/s, done.                       \n",
-      "Enumerating objects: 17, done.\n",
-      "Counting objects: 100% (17/17), done.\n",
+      "Uploading LFS objects: 100% (2/2), 119 MB | 33 MB/s, done.                      \n",
+      "Enumerating objects: 22, done.\n",
+      "Counting objects: 100% (22/22), done.\n",
       "Delta compression using up to 32 threads\n",
-      "Compressing objects: 100% (10/10), done.\n",
-      "Writing objects: 100% (12/12), 797.36 KiB | 7.45 MiB/s, done.\n",
-      "Total 12 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
+      "Compressing objects: 100% (14/14), done.\n",
+      "Writing objects: 100% (17/17), 973.93 KiB | 8.93 MiB/s, done.\n",
+      "Total 17 (delta 5), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (5/5), completed with 5 local objects.\u001b[K\n",
       "To https://github.com/Crimson-Wizard/mildew-detector.git\n",
-      "   794e016..8ecda1f  main -> main\n"
+      "   bf142f4..8da1831  main -> main\n"
      ]
     }
    ],
